update: config quality

--- a/Rentify.RazorWebApp/Pages/PostPages/Index.cshtml
+++ b/Rentify.RazorWebApp/Pages/PostPages/Index.cshtml
@@ -47,20 +47,8 @@
                             <div class="row text-center">
                                 <div class="col-4">
                                     <button class="btn btn-link text-decoration-none text-muted" onclick="openCreateModal()">
-                                        <i class="bi bi-camera-video me-2"></i>
-                                        Video trực tiếp
-                                    </button>
-                                </div>
-                                <div class="col-4">
-                                    <button class="btn btn-link text-decoration-none text-muted" onclick="openCreateModal()">
                                         <i class="bi bi-images me-2"></i>
-                                        Ảnh/Video
-                                    </button>
-                                </div>
-                                <div class="col-4">
-                                    <button class="btn btn-link text-decoration-none text-muted" onclick="openCreateModal()">
-                                        <i class="bi bi-emoji-smile me-2"></i>
-                                        Cảm xúc
+                                        Đăng bài viết mới
                                     </button>
                                 </div>
                             </div>
